<resources>
    <string name="app_name">Japanese Names</string>
    <string name="app_title">Japanese names and surnames generator</string>
    <string name="text2">Name</string>
    <string name="text3">Surname</string>
    <string name="text4">Gender:</string>
    <string name="text5">Create</string>
    <string name="text7">Copy result</string>
    <string name="text6">Result:</string>
    <string name="text8">Original:</string>
    <string name="text9">Meaning:</string>
    <string-array name="genders">
        <item>Any</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="female_names">
        <item>Ai</item>
        <item>Aika</item>
        <item>Aiko</item>
        <item>Aimi</item>
        <item>Akane</item>
        <item>Akemi</item>
        <item>Aki</item>
        <item>Akiko</item>
        <item>Akira</item>
        <item>Amaterasu</item>
        <item>Amaya</item>
        <item>Aoi</item>
        <item>Arisu</item>
        <item>Asami</item>
        <item>Asuka</item>
        <item>Atsuko</item>
        <item>Avaron</item>
        <item>Aya</item>
        <item>Ayaka</item>
        <item>Ayako</item>
        <item>Ayame</item>
        <item>Ayano</item>
        <item>Ayumi</item>
        <item>Azumi</item>
        <item>Bunko</item>
        <item>Chiasa</item>
        <item>Chie</item>
        <item>Chieko</item>
        <item>Chiharu</item>
        <item>Chika</item>
        <item>Chikako</item>
        <item>Chinatsu</item>
        <item>Chiyo</item>
        <item>Chiyoko</item>
        <item>Cho</item>
        <item>Chou</item>
        <item>Eiko</item>
        <item>Emi</item>
        <item>Emiko</item>
        <item>Eri</item>
        <item>Etsuko</item>
        <item>Fuji</item>
        <item>Fumiko</item>
        <item>Gina</item>
        <item>Hana</item>
        <item>Hanako</item>
        <item>Haru</item>
        <item>Haruka</item>
        <item>Haruki</item>
        <item>Haruko</item>
        <item>Harumi</item>
        <item>Hideko</item>
        <item>Hikari</item>
        <item>Hikaru</item>
        <item>Hiro</item>
        <item>Hiroko</item>
        <item>Hiromi</item>
        <item>Hisako</item>
        <item>Hisoka</item>
        <item>Hitomi</item>
        <item>Hoshi</item>
        <item>Hotaru</item>
        <item>Izanami</item>
        <item>Izumi</item>
        <item>Jun</item>
        <item>Junko</item>
        <item>Kaede</item>
        <item>Kame</item>
        <item>Kameko</item>
        <item>Kameyo</item>
        <item>Kamiko</item>
        <item>Kaori</item>
        <item>Kaoru</item>
        <item>Kasumi</item>
        <item>Katsumi</item>
        <item>Kayo</item>
        <item>Kazue</item>
        <item>Kazuko</item>
        <item>Kazumi</item>
        <item>Kei</item>
        <item>Keiko</item>
        <item>Kiku</item>
        <item>Kimi</item>
        <item>Kimiko</item>
        <item>Kin</item>
        <item>Kiyoko</item>
        <item>Kiyomi</item>
        <item>Ko</item>
        <item>Kohaku</item>
        <item>Kotone</item>
        <item>Kou</item>
        <item>Kumiko</item>
        <item>Kyo</item>
        <item>Kyoko</item>
        <item>Kyou</item>
        <item>Madoka</item>
        <item>Mai</item>
        <item>Maiko</item>
        <item>Maki</item>
        <item>Makoto</item>
        <item>Mana</item>
        <item>Manami</item>
        <item>Mari</item>
        <item>Mariko</item>
        <item>Masa</item>
        <item>Masako</item>
        <item>Masami</item>
        <item>Masumi</item>
        <item>Masuyo</item>
        <item>Mayumi</item>
        <item>Megumi</item>
        <item>Mi</item>
        <item>Michi</item>
        <item>Michiko</item>
        <item>Midori</item>
        <item>Mieko</item>
        <item>Miho</item>
        <item>Mika</item>
        <item>Miki</item>
        <item>Minako</item>
        <item>Minori</item>
        <item>Misaki</item>
        <item>Mitsuko</item>
        <item>Mitsuru</item>
        <item>Miwa</item>
        <item>Miyako</item>
        <item>Miyoko</item>
        <item>Miyuki</item>
        <item>Mizuki</item>
        <item>Moe</item>
        <item>Momo</item>
        <item>Momoe</item>
        <item>Momoko</item>
        <item>Moriko</item>
        <item>Nana</item>
        <item>Nao</item>
        <item>Naoki</item>
        <item>Naoko</item>
        <item>Naomi</item>
        <item>Natsuko</item>
        <item>Natsumi</item>
        <item>Nobuko</item>
        <item>Nori</item>
        <item>Noriko</item>
        <item>Ran</item>
        <item>Rei</item>
        <item>Reiko</item>
        <item>Ren</item>
        <item>Rie</item>
        <item>Rika</item>
        <item>Riko</item>
        <item>Rin</item>
        <item>Ryo</item>
        <item>Ryoko</item>
        <item>Sachiko</item>
        <item>Saki</item>
        <item>Sakiko</item>
        <item>Sakura</item>
        <item>Sango</item>
        <item>Sayuri</item>
        <item>Setsuko</item>
        <item>Shig</item>
        <item>Shigeko</item>
        <item>Shika</item>
        <item>Shinju</item>
        <item>Shiori</item>
        <item>Shizuka</item>
        <item>Shizuko</item>
        <item>Sora</item>
        <item>Sumiko</item>
        <item>Susumu</item>
        <item>Suzu</item>
        <item>Suzume</item>
        <item>Takako</item>
        <item>Takara</item>
        <item>Tamiko</item>
        <item>Teruko</item>
        <item>Tomiko</item>
        <item>Tomoko</item>
        <item>Toshiko</item>
        <item>Tsukiko</item>
        <item>Ume</item>
        <item>Umeko</item>
        <item>Usagi</item>
        <item>Yasu</item>
        <item>Yasuko</item>
        <item>Yoko</item>
        <item>Yori</item>
        <item>Yoshi</item>
        <item>Yoshie</item>
        <item>Yoshiko</item>
        <item>Yuka</item>
        <item>Yuki</item>
        <item>Yukiko</item>
        <item>Yuko</item>
        <item>Yumi</item>
        <item>Yumiko</item>
        <item>Yuriko</item>
    </string-array>
    <string-array name="female_original_name">
        <item>Chinese: 1: 蔼, 2: 爱, Japanese: 1: 藍, 2: 愛</item>
        <item>愛佳</item>
        <item>愛子</item>
        <item>愛美</item>
        <item>茜</item>
        <item>明美</item>
        <item>1-秋, 2-明, 3-晶</item>
        <item>1-秋子, 2-明子, 3-晶子</item>
        <item>1-明, 2-亮</item>
        <item>天照</item>
        <item></item>
        <item>1-碧, 2-葵</item>
        <item>アリス</item>
        <item>麻美</item>
        <item>明日香</item>
        <item>1-篤子, 2-温子</item>
        <item>アヴァロン</item>
        <item>1-彩, 2-綾</item>
        <item>1-彩花, 2-彩華</item>
        <item>1-彩子, 2-綾子</item>
        <item>菖蒲</item>
        <item>1-彩乃, 2-綾乃</item>
        <item>あゆみ</item>
        <item>あずみ</item>
        <item></item>
        <item></item>
        <item>恵</item>
        <item>恵子</item>
        <item>千春</item>
        <item>散花</item>
        <item>千香子</item>
        <item>千夏</item>
        <item>千代</item>
        <item>千代子</item>
        <item></item>
        <item>蝶</item>
        <item>栄子</item>
        <item>1-恵美, 2-絵美</item>
        <item>1-恵美子, 2-笑子</item>
        <item>絵理</item>
        <item>悦子</item>
        <item>富</item>
        <item>文子</item>
        <item></item>
        <item>花</item>
        <item>花子</item>
        <item>1-晴, 2-春, 3-陽</item>
        <item>遙, 遥, 悠, 遼</item>
        <item>春樹</item>
        <item>はるこ</item>
        <item>春美</item>
        <item>秀子</item>
        <item>光</item>
        <item>輝</item>
        <item>1-裕, 2-寛, 3-浩</item>
        <item>1-裕子, 2-浩子, 3-寛子</item>
        <item>1-裕美, 2-浩美, 3-寛美</item>
        <item>久子</item>
        <item>密</item>
        <item>瞳</item>
        <item>星</item>
        <item>蛍</item>
        <item>イザナミ</item>
        <item>泉</item>
        <item>順</item>
        <item>1-順子, 2-純子</item>
        <item>楓</item>
        <item></item>
        <item>上子</item>
        <item></item>
        <item>上子</item>
        <item>香織</item>
        <item>薫</item>
        <item>霞</item>
        <item>勝美</item>
        <item></item>
        <item>一恵</item>
        <item>1-和子, 2-一子</item>
        <item>和美</item>
        <item>1-恵, 2-慶, 3-桂, 4-敬, 5-啓, 6-圭, 7-景</item>
        <item>1-恵子, 2-慶子, 3-桂子, 4-敬子, 5-啓子, 6-圭子, 7-景子</item>
        <item>菊</item>
        <item>君</item>
        <item>1-后子, 2-君子</item>
        <item>欽</item>
        <item>清子</item>
        <item>清見</item>
        <item>1-幸, 2-光, 3-康</item>
        <item>琥珀</item>
        <item>琴音</item>
        <item>1-幸, 2-光, 3-康</item>
        <item>久美子</item>
        <item>1-杏, 2- 京, 3- 協, 4- 郷</item>
        <item>恭子</item>
        <item>1-杏, 2- 京, 3- 協, 4- 郷</item>
        <item>1-円, 2-円花</item>
        <item>舞</item>
        <item>舞子</item>
        <item>1-真紀, 2-真希, 3-真貴, 4-真樹</item>
        <item>誠</item>
        <item>愛</item>
        <item>1-愛美, 2-愛海</item>
        <item></item>
        <item>真里子</item>
        <item>1-正, 2-雅, 3-昌, 4-真, 5-政, 6-将</item>
        <item>1-雅子, 2-昌子</item>
        <item>雅美</item>
        <item>真澄</item>
        <item>益世</item>
        <item>麻弓</item>
        <item>恵</item>
        <item>美</item>
        <item>道</item>
        <item>美智子</item>
        <item>緑</item>
        <item>美枝子</item>
        <item>1-美保, 2-美帆</item>
        <item>美香</item>
        <item>1-美紀, 2-美姫, 3-美樹, 4-美貴</item>
        <item>美奈子</item>
        <item>里</item>
        <item>美咲</item>
        <item>光子</item>
        <item>満</item>
        <item>1-美和, 2-美輪, 3-三和, 4-三輪</item>
        <item>美夜子</item>
        <item>美代子</item>
        <item>1-美幸, 2-美雪, 3-深雪</item>
        <item>美月</item>
        <item>萌</item>
        <item>モモ</item>
        <item>百恵</item>
        <item>桃子</item>
        <item>森子</item>
        <item>ナナ</item>
        <item>1-直, 2-尚</item>
        <item>直樹</item>
        <item>1-直子, 2-尚子</item>
        <item>直美</item>
        <item>夏子</item>
        <item>夏美</item>
        <item>信子</item>
        <item>1-儀, 2-典, 3-則, 4-法</item>
        <item>法子 or 典子</item>
        <item>蘭</item>
        <item>1-鈴, 2-零, 3-麗, 4-霊</item>
        <item>麗子</item>
        <item>蓮</item>
        <item>理恵</item>
        <item>泉</item>
        <item>理子</item>
        <item>凛</item>
        <item>1-亮, 2-遼, 3-諒, 4-涼</item>
        <item>1-亮子, 2-涼子</item>
        <item>幸子</item>
        <item>咲</item>
        <item>咲子</item>
        <item>桜</item>
        <item>さんご</item>
        <item>小百合</item>
        <item>節子</item>
        <item></item>
        <item>成子</item>
        <item>鹿</item>
        <item>真珠</item>
        <item>詩織</item>
        <item>静香</item>
        <item>静子</item>
        <item>空</item>
        <item>澄子</item>
        <item>進</item>
        <item>鈴</item>
        <item>雀</item>
        <item>1-隆子, 2-孝子, 3-貴子, 4-敬子</item>
        <item>宝</item>
        <item>民子</item>
        <item>照子</item>
        <item>美子</item>
        <item>1-友子, 2-知子, 3-智子</item>
        <item>敏子</item>
        <item>月子</item>
        <item>梅</item>
        <item>梅子</item>
        <item>兎</item>
        <item>ヤス</item>
        <item>康子</item>
        <item>1-洋子, 2-陽子</item>
        <item>より</item>
        <item>1-義, 2-吉, 3-良</item>
        <item>1-佳江, 2-由栄, 3-淑恵, 4-好恵</item>
        <item>1-好子, 2-芳子, 3-良子</item>
        <item>1-由佳, 2-佑香</item>
        <item>1-幸, 2-雪</item>
        <item>由希子</item>
        <item>1-優子, 2-裕子, 3-祐子</item>
        <item>由美</item>
        <item>由美子</item>
        <item>百合子</item>
    </string-array>
</resources>