<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layGenerator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/cbName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text2" />

            <CheckBox
                android:id="@+id/cbSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text3" />

            <TextView
                android:id="@+id/tvText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text4" />

            <Spinner
                android:id="@+id/spGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/genders" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startBtn_Click"
                android:text="@string/text5" />

            <LinearLayout
                android:id="@+id/layResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvResultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text6" />

                <TextView
                    android:id="@+id/tvResultName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/names" />

                <TextView
                    android:id="@+id/tvResultSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/surnames" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layOroginal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOriginalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text8" />

                <TextView
                    android:id="@+id/tvOriginalName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/names" />

                <TextView
                    android:id="@+id/tvOriginalSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/surnames" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layMeaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMeaningText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text9" />

                <TextView
                    android:id="@+id/tvMeaningName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/names" />

                <TextView
                    android:id="@+id/tvMeaningSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/surnames" />
            </LinearLayout>


            <Button
                android:id="@+id/btnCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="copyBtn_Click"
                android:text="@string/text7" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>